use default theme, add description add bearer auth
