# src/main/java/guesto/user/UserController.java
@@ -12,10 +12,13 @@ import io.micronaut.http.annotation.Post;
 import io.micronaut.security.annotation.Secured;
 import io.micronaut.security.authentication.UsernamePasswordCredentials;
 import io.micronaut.security.rules.SecurityRule;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.inject.Inject;
 
 @Controller("/user")
 @Secured(SecurityRule.IS_ANONYMOUS)
+@Tag(name = "Users", description = "User authentication and management")
 public class UserController {
 
     @Inject
@@ -27,12 +30,14 @@ public class UserController {
     }
 
     @Post("/login")
+    @Operation(summary = "User Login", description = "Authenticates a user with the provided credentials.")
     public HttpResponse<?> login(@Body LoginDTO loginDTO) {
         UsernamePasswordCredentials credentials = new UsernamePasswordCredentials(loginDTO.getUsername(), loginDTO.getPassword());
         return userService.login(credentials).map(token -> HttpResponse.ok(new LoginResponseDTO(loginDTO.getUsername(), token))).orElseGet(HttpResponse::unauthorized);
     }
 
     @Post("/register")
+    @Operation(summary = "User Registration", description = "Registers a new user with the provided details.")
     public HttpResponse<?> register(@Body RegisterDTO registerDTO) {
         return userService.register(registerDTO).map(HttpResponse::created).orElseGet(HttpResponse::badRequest);
     }
